# https---github.com-jlvvlj-everwave_distribution_cli

./: .editorconfig  .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
